--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@tinymce/tinymce-react": "^5.1.1",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.7",
     "quill": "^2.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
