--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.15.0",
     "sass": "^1.62.1",
     "swiper": "^11.1.3",
     "uuid": "^11.1.0",
